--- a/Index.html
+++ b/Index.html
@@ -82,17 +82,32 @@
 
                       </div>
                       <br>
-                      <h6 class="fw-bold">Full Stack Developer</h6>
-                      <h6 class="fst-italic">Jobhun.id || Oktober 2019 - Desember 2019</h6>
-                      <h6>- Membangun Website menggunakan framework laravel dan vue.JS</h6>
-                      <h6>- Bertanggung jawab agar tampilan layar nyaman diguanakan user</h6>
-                      <h6>- Bekerja Menggunakan GIT</h6>
-
+                      <h6 class="fw-bold">Programmer Destop</h6>
+                      <h6 class="fst-italic">Software Gallery || Oktober 2020 - September 2021</h6>
+                      <h6>- Membuat Laporan Menggunakan Fastreport</h6>
+                      <h6>- Menampilkan data yang dibutuhkan oleh user dengan Query SQl</h6>
+                      <h6>- Membantu membuat aplikasi dengan delphi</h6>
                     </div>
-
                     <div class="card-header bg-dark text-white text-left">
-                        <h5>RIWAYAT PRIBADI</h5>
+                        <h5>Pendidikan</h5>
                     </div>
+                    <br>
+                    <div class="card text-justify">
+                        <h6 class="fw-bold">Universitas Narotama</h6>
+                        <h6 class="fst-italic">Teknik Informatika | 2016-2020</h6>
+                        <h6>IPK :3.53</h6>
+                    </div>
+                    <div class="card-header bg-dark text-white text-left">
+                        <h5>Sertifikasi</h5>
+                    </div>
+                    <br>
+                    <div class="card text-justify">
+                        <h6>- Software Enginer, BNSP (2020)</h6>
+                        <h6>- Laravel Web Development, Sanbercode.com(2020)</h6>
+                        <h6>- Fresh Graduate Academy (Java Programming), Kominfo.co.id</h6>
+                        <h6>- Sertifikat Magang Jobhun.co.id(2019)</h6>
+                    </div>
+                    <br>
                 </div>
             </div>
         </div>
