ini tambahkan link tugas

--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,5 @@
+<!-- note : harus terkoneksi dengan internet karena bootstrap nya tidak di download -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -108,6 +110,14 @@
                         <h6>- Sertifikat Magang Jobhun.co.id(2019)</h6>
                     </div>
                     <br>
+                    <div class="card-header bg-dark text-white text-left">
+                        <h5>Souce Code </h5>
+                    </div>
+                    <br>
+                    <div class="card text-justify">
+                        <a href="https://github.com/yunuswidodo/kaspin"><h6>Tugas 1 Mini Project Laravel</h6></a>
+                        <a href="https://github.com/yunuswidodo/portofolio-for-kaspin"><h6>Tugas 2 Landing Page</h6></a>
+                    </div>
                 </div>
             </div>
         </div>
