--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-<!-- note : harus terkoneksi dengan internet karena bootstrap nya tidak di download -->
+<!-- note : harus terkoneksi dengan internet karena bootstrap nya tidak di download dilocal->
 
 <!DOCTYPE html>
 <html lang="en">
